--- a/assets/others/others.scss
+++ b/assets/others/others.scss
@@ -63,22 +63,20 @@ body {
 
 .btn-close {
     background: url(../icons/closee.png) center no-repeat;
-    width: 50px;
-    height: 50px;
+    width: 25px;
+    height: 25px;
     position: absolute;
     border-radius: 200px;
-    right: 3px;
-    top: 3px;
-    transition: all 0.2s ease;
+    right: 60px;
+    top: 45px;
     &:hover {
-        background: #ff000059 url(../icons/closee.png) center no-repeat;
-        border: 1px solid #ff0000a8;
+        opacity: 0.6;
     }
 }
 
 #contact {
     display: none;
-
+    overflow: auto;
     padding: 45px 60px;
     position: fixed;
     top: 50%;
@@ -92,7 +90,7 @@ body {
     z-index: 5;
     &-title {
         font-family: Rubik;
-        font-size: 24px;
+        font-size: 1.33rem;
         line-height: 28px;
         text-transform: uppercase;
         color: $secondary;
@@ -109,7 +107,7 @@ body {
         display: flex;
         flex-direction: column;
         &__subtitle {
-            font-size: 14px;
+            font-size: 0.77rem;
             line-height: 16px;
             text-transform: uppercase;
             color: $secondary;
@@ -136,7 +134,7 @@ body {
 
 #feedback {
     display: none;
-
+    overflow: auto;
     padding: 45px 60px;
     position: fixed;
     top: 50%;
@@ -150,7 +148,7 @@ body {
     z-index: 5;
     &-title {
         font-family: Rubik;
-        font-size: 24px;
+        font-size: 1.33rem;
         line-height: 28px;
         text-transform: uppercase;
         color: $secondary;
@@ -167,7 +165,7 @@ body {
         display: flex;
         flex-direction: column;
         &__subtitle {
-            font-size: 14px;
+            font-size: 0.77rem;
             line-height: 16px;
             text-transform: uppercase;
             color: $secondary;
@@ -207,7 +205,7 @@ body {
     color: #fafafa;
     text-transform: uppercase;
     letter-spacing: 0.1em;
-    font-size: 18px;
+    font-size: 1rem;
     line-height: 24px;
     font-family: Roboto Mono;
     @include tr;
@@ -220,7 +218,7 @@ body {
 
 #donate {
     display: none;
-
+    overflow: auto;
     max-width: 568px;
     padding: 45px 60px;
     position: fixed;
@@ -235,7 +233,7 @@ body {
     z-index: 5;
     &-title {
         font-family: Rubik;
-        font-size: 24px;
+        font-size: 1.33rem;
         line-height: 28px;
         text-transform: uppercase;
         color: $secondary;
@@ -243,7 +241,7 @@ body {
     }
     &-text {
         font-style: italic;
-        font-size: 16px;
+        font-size: 0.88rem;
         line-height: 19px;
         color: #2d2d2d;
         margin-top: 32px;
@@ -263,7 +261,7 @@ body {
                 width: 50%;
                 height: 54px;
                 box-shadow: 0px 2px 30px #0000000f;
-                font-size: 16px;
+                font-size: 0.88rem;
                 line-height: 19px;
                 text-align: center;
                 border: 1px solid #19707d;
@@ -289,7 +287,7 @@ body {
             box-shadow: 0px 2px 30px #0000000f;
             border-radius: 10px;
             height: 54px;
-            font-size: 16px;
+            font-size: 0.88rem;
             line-height: 19px;
             text-align: center;
             color: #19707d;
@@ -311,7 +309,7 @@ body {
         flex-direction: column;
         &__subtitle {
             margin-bottom: 8px;
-            font-size: 14px;
+            font-size: 0.77rem;
             line-height: 16px;
             text-transform: uppercase;
             color: $secondary;
@@ -367,28 +365,34 @@ body {
         column-gap: 15px;
         &__text {
             font-weight: 300;
-            font-size: 14px;
+            font-size: 0.77rem;
             line-height: 16px;
             color: #2d2d2d;
         }
     }
 }
 
+#login-close,
+#signup-close {
+    background: url(../icons/close-white.png) center no-repeat;
+    top: 32px;
+}
+
 .register {
     display: none;
     max-width: 568px;
     position: fixed;
+    overflow: auto;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    background: #fafafa;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     border-radius: 20px;
     z-index: 5;
+    background-color: $primary;
     &-header {
-        background-color: $primary;
         border-radius: 20px 20px 0 0;
         display: flex;
         height: 125px;
@@ -397,6 +401,7 @@ body {
         width: 100%;
     }
     &-main {
+        background: #fafafa;
         padding: 32px 60px 46px 60px;
     }
     &-togglers {
@@ -409,7 +414,7 @@ body {
             display: flex;
             justify-content: center;
             align-items: flex-start;
-            font-size: 18px;
+            font-size: 1rem;
             line-height: 21px;
             text-transform: uppercase;
             color: $secondary;
@@ -435,7 +440,7 @@ body {
             display: flex;
             justify-content: center;
             align-items: center;
-            font-size: 16px;
+            font-size: 0.88rem;
             line-height: 19px;
             color: #2d2d2d;
         }
@@ -450,7 +455,7 @@ body {
         flex-direction: column;
         &__subtitle {
             margin-bottom: 8px;
-            font-size: 14px;
+            font-size: 0.77rem;
             line-height: 16px;
             text-transform: uppercase;
             color: $secondary;
@@ -474,7 +479,7 @@ body {
             height: 22px;
         }
         &__text {
-            font-size: 16px;
+            font-size: 0.88rem;
             line-height: 29px;
             color: #2d2d2d;
             &-link {
