--- a/pages/main/media/media.css
+++ b/pages/main/media/media.css
@@ -1,9 +1,9 @@
 @media (max-width: 1700px) {
   .hero,
-  .header,
   .pay,
   .pets,
   .about,
+  .header,
   .footer,
   .testimonials,
   .animals {
@@ -42,6 +42,9 @@
   }
   .header-nav {
     display: none;
+  }
+  .header-container__btn {
+    display: unset;
   }
   .hero-container {
     max-height: -webkit-max-content;
@@ -87,10 +90,16 @@
     -webkit-box-align: start;
         -ms-flex-align: start;
             align-items: start;
+    display: -ms-grid;
+    display: grid;
   }
   .footer-container {
-    bottom: 20px;
-    right: 50px;
+    -ms-grid-row: 2;
+    -ms-grid-row-span: 1;
+    grid-row: 2 / 3;
+    -ms-grid-column: 2;
+    -ms-grid-column-span: 2;
+    grid-column: 2 / 4;
   }
 }
 
@@ -101,12 +110,16 @@
   }
   .pay-button {
     bottom: 0;
-    margin-right: 16%;
+    margin-right: 17%;
     top: unset;
-    color: #0d444d;
+    color: #19707d;
     border: 1.5px solid #19707d;
   }
+  .pay-container__text {
+    width: 145px;
+  }
   .testimonials {
+    padding: 200px 0 100px;
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
@@ -125,20 +138,37 @@
     -ms-flex-wrap: wrap;
         flex-wrap: wrap;
   }
+  .animals-links:last-child {
+    display: none;
+  }
   .footer {
     height: 200px;
-  }
-  .footer-logo {
-    position: absolute;
-    bottom: 20px;
-    left: 50px;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
   }
   .footer-nav {
-    margin: 0;
+    -ms-grid-column: 1;
+    -ms-grid-column-span: 2;
+    grid-column: 1 / 3;
+    margin: unset;
+  }
+  .footer-logo {
+    -ms-grid-column: 1;
+    -ms-grid-column-span: 1;
+    grid-column: 1 / 2;
+  }
+  .footer-container {
+    -ms-grid-column: 2;
+    -ms-grid-column-span: 1;
+    grid-column: 2 / 3;
   }
 }
 
 @media (max-width: 600px) {
+  html {
+    font-size: 13px;
+  }
   .menu {
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
@@ -236,8 +266,17 @@
   .pay-container-2, .pay-container-3 {
     margin-top: 20px;
   }
+  .testimonials-tcard {
+    max-width: 320px;
+  }
+  .testimonials-bcard {
+    padding: 0;
+  }
+  .animals {
+    max-width: 400px;
+    row-gap: 20px;
+  }
   .footer {
-    height: 430px;
     -webkit-box-align: center;
         -ms-flex-align: center;
             align-items: center;
@@ -245,6 +284,24 @@
     -webkit-box-direction: normal;
         -ms-flex-direction: column;
             flex-direction: column;
+    align-items: center;
+    height: 430px;
+    -ms-grid-columns: 1fr;
+        grid-template-columns: 1fr;
+  }
+  .footer-wrapper {
+    height: 430px;
+  }
+  .footer-logo {
+    margin-top: 10px;
+    -ms-grid-row: 1;
+    -ms-grid-row-span: 1;
+    grid-row: 1 / 2;
+    -ms-grid-column: 1;
+    -ms-grid-column-span: 1;
+    grid-column: 1 / 2;
+    -ms-grid-column-align: center;
+        justify-self: center;
   }
   .footer-nav {
     -webkit-box-align: center;
@@ -253,17 +310,27 @@
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
-    margin-top: 30px;
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
         -ms-flex-direction: column;
             flex-direction: column;
-  }
-  .footer-logo {
-    position: unset;
+    -ms-grid-column: 1;
+    -ms-grid-column-span: 1;
+    grid-column: 1 / 2;
+    -ms-grid-row: 2;
+    -ms-grid-row-span: 1;
+    grid-row: 2 / 3;
   }
   .footer-container {
-    padding: 0;
+    -ms-grid-row: 3;
+    -ms-grid-row-span: 1;
+    grid-row: 3 / 4;
+    -ms-grid-column: 1;
+    -ms-grid-column-span: 1;
+    grid-column: 1 / 2;
+    margin: unset;
+    -ms-grid-column-align: center;
+        justify-self: center;
   }
 }
 /*# sourceMappingURL=media.css.map */
