--- a/pages/main/media/media.scss
+++ b/pages/main/media/media.scss
@@ -1,9 +1,9 @@
 @media (max-width: 1700px) {
     .hero,
-    .header,
     .pay,
     .pets,
     .about,
+    .header,
     .footer,
     .testimonials,
     .animals {
@@ -48,8 +48,13 @@
             display: none;
         }
     }
-    .header-nav {
-        display: none;
+    .header {
+        &-nav {
+            display: none;
+        }
+        &-container__btn {
+            display: unset;
+        }
     }
     .hero {
         &-container {
@@ -92,9 +97,10 @@
     .footer {
         height: 150px;
         align-items: start;
+        display: grid;
         &-container {
-            bottom: 20px;
-            right: 50px;
+            grid-row: 2 / 3;
+            grid-column: 2 / 4;
         }
     }
 }
@@ -103,14 +109,20 @@
     .pets-container {
         grid-template-columns: 400px;
     }
-    .pay-button {
-        bottom: 0;
-        margin-right: 16%;
-        top: unset;
-        color: #0d444d;
-        border: 1.5px solid #19707d;
+    .pay {
+        &-button {
+            bottom: 0;
+            margin-right: 17%;
+            top: unset;
+            color: #19707d;
+            border: 1.5px solid #19707d;
+        }
+        &-container__text {
+            width: 145px;
+        }
     }
     .testimonials {
+        padding: 200px 0 100px;
         display: flex;
         flex-direction: column;
         align-items: center;
@@ -120,21 +132,30 @@
     }
     .animals {
         flex-wrap: wrap;
+        &-links:last-child {
+            display: none;
+        }
     }
     .footer {
         height: 200px;
-        &-logo {
-            position: absolute;
-            bottom: 20px;
-            left: 50px;
-        }
+        align-items: center;
         &-nav {
-            margin: 0;
+            grid-column: 1 / 3;
+            margin: unset;
+        }
+        &-logo {
+            grid-column: 1 / 2;
+        }
+        &-container {
+            grid-column: 2 / 3;
         }
     }
 }
 
 @media (max-width: 600px) {
+    html {
+        font-size: 13px;
+    }
     .menu {
         flex-direction: column;
         height: 300px;
@@ -206,21 +227,45 @@
             }
         }
     }
+    .testimonials {
+        &-tcard {
+            max-width: 320px;
+        }
+        &-bcard {
+            padding: 0;
+        }
+    }
+    .animals {
+        max-width: 400px;
+        row-gap: 20px;
+    }
     .footer {
-        height: 430px;
         align-items: center;
         flex-direction: column;
+        align-items: center;
+        height: 430px;
+        grid-template-columns: 1fr;
+        &-wrapper {
+            height: 430px;
+        }
+        &-logo {
+            margin-top: 10px;
+            grid-row: 1 / 2;
+            grid-column: 1 / 2;
+            justify-self: center;
+        }
         &-nav {
             align-items: center;
             display: flex;
-            margin-top: 30px;
             flex-direction: column;
-        }
-        &-logo {
-            position: unset;
+            grid-column: 1 / 2;
+            grid-row: 2 / 3;
         }
         &-container {
-            padding: 0;
+            grid-row: 3 / 4;
+            grid-column: 1 / 2;
+            margin: unset;
+            justify-self: center;
         }
     }
 }
