--- a/pages/main/style.css
+++ b/pages/main/style.css
@@ -6,6 +6,7 @@ html {
 }
 
 .header-hero {
+  padding-top: 110px;
   position: relative;
 }
 
@@ -14,8 +15,8 @@ html {
   display: grid;
   -ms-grid-columns: (auto)[5];
       grid-template-columns: repeat(5, auto);
-  -webkit-column-gap: 52px;
-          column-gap: 52px;
+  -webkit-column-gap: 50px;
+          column-gap: 50px;
   margin-left: 53px;
 }
 
@@ -28,6 +29,12 @@ html {
   line-height: 40px;
   -webkit-transition: all 0.3s ease;
   transition: all 0.3s ease;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 
 .nav-link:hover {
@@ -39,20 +46,31 @@ html {
 }
 
 .header {
-  padding: 0 90px 0 220px;
-  background: #2a8086;
-  min-height: 110px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  position: relative;
-  margin-bottom: -2px;
+  width: 1920px;
+  padding: 0 220px;
+}
+
+.header-wrapper {
   z-index: 3;
+  top: 0;
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  position: fixed;
+  background: #2a8086;
   -webkit-filter: drop-shadow(0px 1px 10px #12575b40);
           filter: drop-shadow(0px 1px 10px #12575b40);
+  min-height: 110px;
 }
 
 .header-container {
@@ -63,9 +81,10 @@ html {
   -webkit-box-direction: normal;
       -ms-flex-direction: row;
           flex-direction: row;
-  position: absolute;
-  right: 90px;
-  max-width: 500px;
+  margin-left: auto;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
 .header-container__input {
@@ -101,6 +120,7 @@ html {
 }
 
 .header-container__signup {
+  padding: 5px 8px;
   text-transform: uppercase;
   color: #c5e1e5;
   border: 1px solid #c5e1e5;
@@ -117,6 +137,7 @@ html {
 }
 
 .header-container__btn {
+  display: none;
   background: url(../../assets/icons/menu.svg) center no-repeat;
   width: 35px;
   height: 35px;
@@ -128,6 +149,8 @@ html {
   display: none;
   margin-bottom: -2px;
   z-index: 2;
+  position: fixed;
+  width: 100%;
   background: #2a8086;
   height: 100px;
   -webkit-box-orient: horizontal;
@@ -164,7 +187,7 @@ html {
   min-height: 795px;
   max-width: 1920px;
   background: url(../../assets/images/hero-bg.png) center no-repeat;
-  padding: 0 220px;
+  padding: 0px 220px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -180,7 +203,7 @@ html {
 
 .hero-container {
   max-width: 700px;
-  padding-top: 103px;
+  padding-top: 85px;
 }
 
 .hero-title {
@@ -188,6 +211,7 @@ html {
   color: #f3f7f8;
   font-size: 4rem;
   font-weight: 300;
+  line-height: 80px;
 }
 
 .hero-title__span {
@@ -199,6 +223,7 @@ html {
 .hero-text {
   max-width: 480px;
   margin: 27px 0 87px 0;
+  line-height: 30px;
   color: #f3f7f8;
 }
 
@@ -233,6 +258,7 @@ html {
 
 .hero-image {
   position: relative;
+  margin-top: 20px;
 }
 
 .hero-image__link {
@@ -612,6 +638,8 @@ html {
   -ms-grid-columns: (auto)[3];
       grid-template-columns: repeat(3, auto);
   row-gap: 64px;
+  -webkit-column-gap: 30px;
+          column-gap: 30px;
   max-width: 1920px;
   margin: auto;
 }
@@ -691,7 +719,7 @@ html {
 }
 
 .testimonials-tcard {
-  background: url(../../assets/images/white-rect.png);
+  background: url(../../assets/images/white-rect.png) center no-repeat;
   width: 100%;
   height: 220px;
   padding: 55px 56px 0 56px;
@@ -771,30 +799,58 @@ html {
 }
 
 .footer {
-  background: #196469;
-  height: 200px;
-  padding-left: 200px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  position: relative;
+  width: 1920px;
+  padding: 0 220px;
+  -ms-grid-columns: 100px 1fr;
+      grid-template-columns: 100px 1fr;
+  -ms-grid-rows: (auto)[2];
+      grid-template-rows: repeat(2, auto);
 }
 
-.footer-container {
-  padding-left: 220px;
-  bottom: 56px;
-  right: 92px;
+.footer-wrapper {
+  background: #196469;
+  height: 200px;
+  width: 100%;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  background: #2a8086;
+}
+
+.footer-nav {
+  -ms-grid-column: 2;
+  -ms-grid-column-span: 1;
+  grid-column: 2 / 3;
+  -ms-grid-row: 1;
+  -ms-grid-row-span: 1;
+  grid-row: 1 / 2;
+  max-width: 520px;
+}
+
+.footer-container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-grid-column: 2;
+  -ms-grid-column-span: 1;
+  grid-column: 2 / 3;
+  -ms-grid-row: 1;
+  -ms-grid-row-span: 1;
+  grid-row: 1 / 2;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  position: absolute;
+  margin-left: auto;
 }
 
 .footer-author {
