--- a/assets/others/others.scss
+++ b/assets/others/others.scss
@@ -36,6 +36,10 @@ body {
     transition: all 0.3s ease;
 }
 
+#checkMaxWidth {
+    color: red;
+}
+
 .logo {
     width: 108px;
     height: 83px;
