--- a/pages/map/style.css
+++ b/pages/map/style.css
@@ -15,8 +15,8 @@ html {
   display: grid;
   -ms-grid-columns: (auto)[5];
       grid-template-columns: repeat(5, auto);
-  -webkit-column-gap: 52px;
-          column-gap: 52px;
+  -webkit-column-gap: 50px;
+          column-gap: 50px;
   margin-left: 53px;
 }
 
@@ -29,6 +29,12 @@ html {
   line-height: 40px;
   -webkit-transition: all 0.3s ease;
   transition: all 0.3s ease;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 
 .nav-link:hover {
@@ -46,9 +52,6 @@ html {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
   width: 1920px;
   padding: 0 220px;
 }
@@ -78,7 +81,10 @@ html {
   -webkit-box-direction: normal;
       -ms-flex-direction: row;
           flex-direction: row;
-  max-width: 500px;
+  margin-left: auto;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
 .header-container__input {
@@ -114,6 +120,7 @@ html {
 }
 
 .header-container__signup {
+  padding: 5px 8px;
   text-transform: uppercase;
   color: #c5e1e5;
   border: 1px solid #c5e1e5;
@@ -139,13 +146,17 @@ html {
 .menu {
   -webkit-filter: drop-shadow(0px 1px 10px #12575b40);
           filter: drop-shadow(0px 1px 10px #12575b40);
-  display: none;
-  margin-bottom: -2px;
-  z-index: 2;
+  height: 0;
+  z-index: -2;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  margin-top: -5px;
+  -webkit-transition: 0.5s cubic-bezier(0, 0, 1, 1);
+  transition: 0.5s cubic-bezier(0, 0, 1, 1);
   position: fixed;
   width: 100%;
   background: #2a8086;
-  height: 100px;
   -webkit-box-orient: horizontal;
   -webkit-box-direction: normal;
       -ms-flex-direction: row;
@@ -158,6 +169,10 @@ html {
           justify-content: center;
   -webkit-column-gap: 30px;
           column-gap: 30px;
+}
+
+.menu-wrapper {
+  display: none;
 }
 
 .menu-link {
@@ -181,7 +196,6 @@ html {
 }
 
 .map {
-  background: #2a8086;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -193,6 +207,14 @@ html {
           justify-content: center;
   padding: 107px 0 16px 0;
   position: relative;
+  max-width: 1920px;
+  margin: auto;
+}
+
+.map-wrapper {
+  background: #2a8086;
+  width: 100%;
+  height: 100%;
 }
 
 .map-title {
@@ -268,7 +290,7 @@ html {
   -webkit-column-gap: 15px;
           column-gap: 15px;
   position: absolute;
-  right: 103px;
+  right: 220px;
   bottom: 25px;
 }
 
@@ -304,6 +326,10 @@ html {
           align-items: center;
   width: 1920px;
   padding: 0 220px;
+  -ms-grid-columns: 100px 1fr;
+      grid-template-columns: 100px 1fr;
+  -ms-grid-rows: (auto)[2];
+      grid-template-rows: repeat(2, auto);
 }
 
 .footer-wrapper {
@@ -319,11 +345,26 @@ html {
   background: #2a8086;
 }
 
+.footer-nav {
+  -ms-grid-column: 2;
+  -ms-grid-column-span: 1;
+  grid-column: 2 / 3;
+  -ms-grid-row: 1;
+  -ms-grid-row-span: 1;
+  grid-row: 1 / 2;
+  max-width: 520px;
+}
+
 .footer-container {
-  padding-left: 220px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -ms-grid-column: 2;
+  -ms-grid-column-span: 1;
+  grid-column: 2 / 3;
+  -ms-grid-row: 1;
+  -ms-grid-row-span: 1;
+  grid-row: 1 / 2;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
