--- a/pages/map/style.scss
+++ b/pages/map/style.scss
@@ -26,7 +26,7 @@ html {
 .nav {
     display: grid;
     grid-template-columns: repeat(5, auto);
-    column-gap: 52px;
+    column-gap: 50px;
     margin-left: 53px;
     &-link {
         font-family: Roboto Mono;
@@ -36,6 +36,8 @@ html {
         text-transform: uppercase;
         line-height: 40px;
         @include slowTrans;
+        display: flex;
+        justify-content: center;
         &:hover {
             color: $secondary;
         }
@@ -48,7 +50,6 @@ html {
 .header {
     display: flex;
     align-items: center;
-    justify-content: space-between;
     width: 1920px;
     padding: 0 220px;
     &-wrapper {
@@ -65,7 +66,8 @@ html {
     &-container {
         display: flex;
         flex-direction: row;
-        max-width: 500px;
+        margin-left: auto;
+        align-items: center;
         &__input {
             background: $tertiary;
             display: none;
@@ -90,6 +92,7 @@ html {
             }
         }
         &__signup {
+            padding: 5px 8px;
             text-transform: uppercase;
             color: $tertiary;
             border: 1px solid $tertiary;
@@ -112,17 +115,21 @@ html {
 
 .menu {
     filter: drop-shadow(0px 1px 10px $borderBottom);
-    display: none;
-    margin-bottom: -2px;
-    z-index: 2;
+    height: 0;
+    z-index: -2;
+    display: flex;
+    margin-top: -5px;
+    transition: 0.5s cubic-bezier(0, 0, 1, 1);
     position: fixed;
     width: 100%;
     background: $primary;
-    height: 100px;
     flex-direction: row;
     align-items: center;
     justify-content: center;
     column-gap: 30px;
+    &-wrapper {
+        display: none;
+    }
     &-link {
         color: $tertiary;
         font-family: Roboto Mono;
@@ -143,12 +150,18 @@ html {
 }
 
 .map {
-    background: $primary;
     display: flex;
     align-items: center;
     justify-content: center;
     padding: 107px 0 16px 0;
     position: relative;
+    max-width: 1920px;
+    margin: auto;
+    &-wrapper {
+        background: $primary;
+        width: 100%;
+        height: 100%;
+    }
     &-title {
         font-family: Rubik;
         font-size: 24px;
@@ -200,7 +213,7 @@ html {
         flex-direction: row;
         column-gap: 15px;
         position: absolute;
-        right: 103px;
+        right: 220px;
         bottom: 25px;
         &__btn {
             width: 32.52px;
@@ -224,6 +237,8 @@ html {
     align-items: center;
     width: 1920px;
     padding: 0 220px;
+    grid-template-columns: 100px 1fr;
+    grid-template-rows: repeat(2, auto);
     &-wrapper {
         background: #196469;
         height: 200px;
@@ -232,9 +247,15 @@ html {
         justify-content: center;
         background: $primary;
     }
+    &-nav {
+        grid-column: 2 / 3;
+        grid-row: 1 / 2;
+        max-width: 520px;
+    }
     &-container {
-        padding-left: 220px;
         display: flex;
+        grid-column: 2 / 3;
+        grid-row: 1 / 2;
         flex-direction: column;
         margin-left: auto;
     }
