--- a/assets/others/media/media.css
+++ b/assets/others/media/media.css
@@ -60,9 +60,6 @@
 }
 
 @media (max-width: 600px) {
-  #checkMaxWidth {
-    color: blue;
-  }
   .send-btn {
     width: 260px;
     height: 40px;
@@ -73,7 +70,6 @@
   }
   #signup-close,
   #login-close {
-    top: 35px;
     right: 40px;
   }
   #contact {
@@ -208,7 +204,7 @@
     height: 80px;
   }
   .register-togglers__btn {
-    height: unset;
+    height: 50px;
   }
   .register-main {
     padding: 20px 35px;
