--- a/pages/main/media/media.scss
+++ b/pages/main/media/media.scss
@@ -159,6 +159,7 @@
     .menu {
         flex-direction: column;
         height: 300px;
+        margin-top: -300px;
     }
     .hero-container {
         position: unset;
