--- a/pages/main/media/media.css
+++ b/pages/main/media/media.css
@@ -175,6 +175,7 @@
         -ms-flex-direction: column;
             flex-direction: column;
     height: 300px;
+    margin-top: -300px;
   }
   .hero-container {
     position: unset;
